--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -1,7 +1,24 @@
 /* GLOBAL */
 @import "./common/variables.scss";
+@import "./common/mixins.scss";
 @import "./common/global.scss";
-@import "./common/fonts.scss";
 
-/* BLOCKS */
-@import "./blocks/header.scss";
+/* BLOCKS index */
+@import "./blocks/visually-hidden.scss";
+@import "./blocks/page.scss";
+@import "./blocks/main-header.scss";
+@import "./blocks/main-navigation.scss";
+@import "./blocks/page-content.scss";
+@import "./blocks/hero.scss";
+@import "./blocks/programs.scss";
+@import "./blocks/how-it-works.scss";
+@import "./blocks/example.scss";
+@import "./blocks/demonstration.scss";
+@import "./blocks/footer.scss";
+@import "./blocks/social-list.scss";
+
+/* Catalog */
+@import "./blocks/catalog.scss";
+@import "./blocks/list-item.scss";
+@import "./blocks/sub-products.scss";
+@import "./blocks/subscribe.scss";
