--- a/source/styles/common/fonts.scss
+++ b/source/styles/common/fonts.scss
@@ -1,3 +1,1 @@
-@include font-face("Lato", 400, url("../../fonts/lato/Lato-Regular.woff2") format("woff2"));
-@include font-face("Oswald", 400, url("../../fonts/oswald/oswaldregular.woff2") format("woff2"));
-
+/* здесь подключите шрифты */
