--- a/source/styles/common/global.scss
+++ b/source/styles/common/global.scss
@@ -1,9 +1,1 @@
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-
-body {
-  font-family: "Lato", sans-serif;
-}
+/* здесь используйте глобальные селекторы img, body, html и так далее */
