--- a/source/styles/common/variables.scss
+++ b/source/styles/common/variables.scss
@@ -1,5 +1,1 @@
-$base-color-text: #444444;
-$base-title-color-text:#222222;
-$base-accent-color-text: #ffffff;
-$base-color-background: #68b738;
-$base-accent-color-background: #f2f2f2;
+/* здесь используйте глобальные переменные */
