--- a/source/styles/blocks/list-item.scss
+++ b/source/styles/blocks/list-item.scss
@@ -12,8 +12,7 @@
   color: $base-color-text;
 }
 
-.list-item__link-oder {
-  text-decoration: none;
+.list-item__link-order {
   font-family: "Oswald", sans-serif;
   text-transform: uppercase;
   font-size: 16px;
