--- a/source/styles/blocks/sub-products.scss
+++ b/source/styles/blocks/sub-products.scss
@@ -24,8 +24,7 @@
   color: $base-color-text;
 }
 
-.sub-products__link-oder {
-  text-decoration: none;
+.sub-products__link-order {
   font-family: "Oswald", sans-serif;
   font-size: 16px;
   line-height: 20px;
