--- a/source/styles/blocks/subscribe.scss
+++ b/source/styles/blocks/subscribe.scss
@@ -18,7 +18,7 @@
   font-size: 20px;
   text-transform: uppercase;
   color: $base-color-text;
-  border: 1px solid #cdcdcd;
+  border: 1px solid $base-color-border;
   width: 280px;
   padding: 12px;
 }
