--- a/source/styles/main.scss
+++ b/source/styles/main.scss
@@ -5,6 +5,7 @@
 @forward "common/global.scss";
 
 /* BLOCKS index */
+@forward "blocks/visually-hidden.scss";
 @forward "blocks/page.scss";
 @forward "blocks/main-header.scss";
 @forward "blocks/main-navigation.scss";
