--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -1,7 +1,1 @@
-/* GLOBAL */
-@import "./common/variables.scss";
-@import "./common/global.scss";
-@import "./common/fonts.scss";
-
-/* BLOCKS */
-@import "./blocks/header.scss";
+@use "main.scss" as *;
