visually-hidden теперь не блок а просто миксин (подключено к глобал, удален из main)

--- a/source/styles/common/global.scss
+++ b/source/styles/common/global.scss
@@ -6,6 +6,10 @@
   box-sizing: border-box;
 }
 
+.visually-hidden {
+  @include visually-hidden-core;
+}
+
 body {
   font-family: "Lato", "arial", sans-serif;
   font-size: 14px;
