visually-hidden теперь не блок а просто миксин (подключено к глобал, удален из main)

--- a/source/styles/common/global.scss
+++ b/source/styles/common/global.scss
@@ -1,7 +1,13 @@
+@use "../common/mixins" as *;
+
 *,
 *::before,
 *::after {
   box-sizing: border-box;
+}
+
+.visually-hidden {
+  @include visually-hidden-core;
 }
 
 body {
