--- a/source/styles/blocks/demonstration.scss
+++ b/source/styles/blocks/demonstration.scss
@@ -1,3 +1,83 @@
+@use "../common/variables.scss" as *;
+
 .demonstration {
-  min-width: 280px;
+  position: relative;
+  width: 100%;
+  max-width: 560px;
+  margin: 0 auto;
+  overflow: hidden;
+  opacity: 0;
+  animation: fadeIn 0.6s ease-out forwards;
+}
+
+.demonstration__demonstration-image {
+  display: block;
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+
+.demonstration__demonstration-image--before {
+  position: relative;
+  z-index: 1;
+}
+
+.demonstration__demonstration-image--after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  clip-path: polygon(50% 0, 100% 0, 100% 100%, 50% 100%);
+}
+
+/* Стили для ползунка */
+.demonstration__slider {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  width: 4px;
+  height: 100%;
+  background-color: $icon-background-color;
+  cursor: ew-resize;
+  transform: translateX(-50%);
+  z-index: 3;
+  border-radius: 2px;
+}
+
+.demonstration__slider::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 40px;
+  height: 40px;
+  background-color: $base-accent-color-text;
+  border: 2px solid $icon-background-color;
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+}
+
+.demonstration__slider::after {
+  content: "◄►";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  color: $icon-background-color;
+  font-size: 18px;
+  transform: translate(-50%, -50%);
+  cursor: grab;
+}
+
+@keyframes fadeIn {
+  to {
+    opacity: 1;
+  }
+}
+
+.demonstration__slider:active::before {
+  transform: translate(-50%, -50%) scale(0.95);
+  background-color: #f8f8f8;
 }
