--- a/source/styles/blocks/example.scss
+++ b/source/styles/blocks/example.scss
@@ -1,7 +1,8 @@
 @use "../common/variables.scss" as *;
+@use "../common/mixins.scss" as *;
 
 .example {
-  background-color: $base-accent-color-background;
+  background-color: $base-moreaccent-color-background;
 }
 
 .example__title {
@@ -35,6 +36,29 @@
   font-family: "Oswald", sans-serif;
   font-size: 14px;
   line-height: 20px;
+  text-transform: uppercase;
   display: block;
   text-align: center;
+  margin-bottom: 20px;
+}
+
+.example__results {
+  text-transform: uppercase;
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 20px;
+  gap: 32px;
+  justify-content: center;
+}
+
+.example__results-difference {
+  padding: 14 42 17;
+
+  @include decorative-border;
+}
+
+.example__results-time {
+  padding: 14 21 17;
+
+  @include decorative-border($content: "затрачено времени");
 }
