--- a/source/styles/blocks/catalog.scss
+++ b/source/styles/blocks/catalog.scss
@@ -83,23 +83,20 @@
   }
 }
 
+.catalog__more {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .catalog__more-title {
   font-family: "Oswald", sans-serif;
   font-size: 16px;
   line-height: 20px;
   text-transform: uppercase;
   position: relative;
-  padding-top: 53px;
+  padding-top: 55px;
   margin: 0 0 8px;
-
-  @media screen and (min-width: $tablet-width) {
-    max-width: 134px;
-    padding-top: 110px;
-    font-size: 20px;
-    line-height: 24px;
-    margin-bottom: 23px;
-    text-align: center;
-  }
 }
 
 .catalog__more-title::before {
@@ -108,14 +105,9 @@
   width: 30px;
   height: 2px;
   background-color: $icon-basic-grey;
-  top: 13px;
+  top: 23px;
   left: 50%;
   transform: translateX(-50%);
-
-  @media screen and (min-width: $tablet-width) {
-    width: 60px;
-    top: 28px;
-  }
 }
 
 .catalog__more-title::after {
@@ -124,13 +116,9 @@
   width: 2px;
   height: 30px;
   background-color: $icon-basic-grey;
-  top: 0;
+  top: 8px; /* 23px - 15px (половина высоты крестика) */
   left: 50%;
   transform: translateX(-50%);
-
-  @media screen and (min-width: $tablet-width) {
-    height: 60px;
-  }
 }
 
 .catalog__more-desc {
@@ -138,14 +126,6 @@
   line-height: 16px;
   color: $base-color-text;
   margin: 0 0 21px;
-
-  @media screen and (min-width: $tablet-width) {
-    font-size: 16px;
-    line-height: 18px;
-    max-width: 170px;
-    text-align: center;
-    margin-bottom: 82px;
-  }
 }
 
 .catalog__more-show {
@@ -156,18 +136,6 @@
   text-align: center;
   color: $base-color-text;
   background-color: $base-accent-color-background;
-  max-width: 280px;
-  padding: 10px 95px;
-
-  @include card-button-condition;
-
-  @media screen and (min-width: $tablet-width) {
-    min-width: 250px;
-    padding: 10px 40px;
-  }
-
-  @media screen and (min-width: $desktop-width) {
-    min-width: 169px;
-    padding: 10px;
-  }
+  width: 280px;
+  padding: 10px 40px;
 }
