--- a/source/styles/blocks/example.scss
+++ b/source/styles/blocks/example.scss
@@ -1,59 +1,8 @@
 @use "../common/variables.scss" as *;
+@use "../common/mixins.scss" as *;
 
 .example {
   background-color: $base-moreaccent-color-background;
-  padding: 25px 20px 40px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
-  @media screen and (min-width: $tablet-width) {
-    background-color: $base-accent-color-text;
-    padding: 0 30px 101px;
-    position: relative;
-
-    &::before {
-      content: "";
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      height: 462px;
-      background-color: $base-moreaccent-color-background;
-      z-index: 0;
-    }
-  }
-
-  @media screen and (min-width: $desktop-width) {
-    display: flex;
-    flex-flow: row wrap;
-    padding: 0 101px 85px;
-    align-items: flex-end;
-    justify-content: center;
-    gap: 224px;
-
-    &::before {
-      background-color: $base-accent-color-background;
-    }
-  }
-}
-
-.example__wrapper {
-  max-width: 280px;
-
-  @media screen and (min-width: $tablet-width) {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-between;
-    max-width: 708px;
-    margin-bottom: 104px;
-  }
-
-  @media screen and (min-width: $desktop-width) {
-    max-width: 436px;
-    z-index: 0;
-    margin-bottom: 0;
-  }
 }
 
 .example__title {
@@ -122,68 +71,25 @@
   display: block;
   text-align: center;
   margin-bottom: 20px;
-
-  @media screen and (min-width: $tablet-width) {
-    max-width: 174px;
-    font-size: 20px;
-    padding: 11px 0 17px;
-    margin-bottom: 0;
-    text-align: right;
-  }
-
-  @media screen and (min-width: $desktop-width) {
-    display: flex;
-    gap: 63px;
-    max-width: 500px;
-  }
 }
 
 .example__results {
   text-transform: uppercase;
   display: flex;
   flex-wrap: wrap;
-  margin-bottom: 34px;
-  gap: 30px;
+  margin-bottom: 20px;
+  gap: 32px;
   justify-content: center;
-
-  @media screen and (min-width: $tablet-width) {
-    margin-bottom: 0;
-  }
-
-  @media screen and (min-width: $desktop-width) {
-    gap: 42px;
-    margin-bottom: 60px;
-  }
 }
 
 .example__results-difference {
-  padding: 14px 42px 17px;
+  padding: 14 42 17;
 
   @include decorative-border;
-
-  @media screen and (min-width: $tablet-width) {
-    @include decorative-border($background: $base-accent-color-text);
-  }
-
-  @media screen and (min-width: $desktop-width) {
-    @include decorative-border($background: $base-accent-color-background);
-    padding-top: 15px;
-    padding-bottom: 20px;
-  }
 }
 
 .example__results-time {
-  padding: 14px 21px 17px;
+  padding: 14 21 17;
 
   @include decorative-border($content: "затрачено времени");
-
-  @media screen and (min-width: $tablet-width) {
-    @include decorative-border($background: $base-accent-color-text);
-  }
-
-  @media screen and (min-width: $desktop-width) {
-    @include decorative-border($background: $base-accent-color-background);
-    padding-top: 15px;
-    padding-bottom: 20px;
-  }
 }
