--- a/source/styles/blocks/sub-products.scss
+++ b/source/styles/blocks/sub-products.scss
@@ -251,21 +251,17 @@
   line-height: 20px;
   color: $base-accent-color-text;
   text-align: center;
-  padding: 48px 0 23px;
-  margin: 0 auto;
-  max-width: 162px;
+  position: relative;
+  padding-top: 60px;
+}
 
-  @media screen and (min-width: $tablet-width) {
-    min-width: 161px;
-    text-align: left;
-    padding: 0;
-    margin: 0;
-  }
-
-  @media screen and (min-width: $desktop-width) {
-    text-align: center;
-    padding: 46px 0 23px;
-    margin: 0 auto;
-    max-width: 162px;
-  }
+.sub-products__gift-desc::before {
+  content: "";
+  position: absolute;
+  top: -48px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 78px;
+  height: 80px;
+  background: url("../../icons/gift.svg") center/contain no-repeat;
 }
