--- a/source/styles/blocks/social-list.scss
+++ b/source/styles/blocks/social-list.scss
@@ -17,7 +17,7 @@
   min-width: 28px;
   min-height: 22px;
   display: block;
-  background-color: #666666;
+  background-color: $icon-background-color;
 }
 
 .social-list__link--vk {
