--- a/source/styles/blocks/example.scss
+++ b/source/styles/blocks/example.scss
@@ -52,13 +52,13 @@
 }
 
 .example__results-difference {
-  padding: 14 42 17;
+  padding: 14px 42px 17px;
 
   @include decorative-border;
 }
 
 .example__results-time {
-  padding: 14 21 17;
+  padding: 14px 21px 17px;
 
   @include decorative-border($content: "затрачено времени");
 }
