--- a/source/styles/common/mixins.scss
+++ b/source/styles/common/mixins.scss
@@ -33,7 +33,7 @@
     transform: translateX(-50%);
     width: $width;
     height: 1px;
-    background-color: #d9d9d9;
+    background-color: $decoration-line;
   }
 }
 
