--- a/source/styles/common/variables.scss
+++ b/source/styles/common/variables.scss
@@ -9,3 +9,4 @@ $base-moreaccent-color-background: #eaeaea;
 $icon-background-color: #666666;
 $icon-basic-black: #000000;
 $icon-basic-grey: #d3d3d3;
+$decoration-line: #d9d9d9;
