верстка крупных блоков

--- a/source/styles/blocks/catalog.scss
+++ b/source/styles/blocks/catalog.scss
@@ -2,6 +2,35 @@
 
 .catalog__list {
   list-style: none;
+  margin: 0;
+  padding: 0;
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+}
+
+@media (min-width: $tablet-width) {
+  .catalog__list {
+    display: contents;
+  }
+
+  .catalog__wrapper {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    width: 708px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .catalog__wrapper {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+.catalog__item {
+  display: flex;
+  flex-wrap: wrap;
+  width: 320px;
+  padding: 20px 20px 25px;
 }
 
 .catalog__more {
