--- a/source/styles/blocks/list-item.scss
+++ b/source/styles/blocks/list-item.scss
@@ -21,4 +21,6 @@
   line-height: 20px;
   color: $base-accent-color-text;
   background-color: $base-color-background;
+  min-width: 280px;
+  text-align: center;
 }
