--- a/source/styles/blocks/sub-products.scss
+++ b/source/styles/blocks/sub-products.scss
@@ -55,3 +55,26 @@
   height: 80px;
   background: url("../../icons/gift.svg") center/contain no-repeat;
 }
+
+.sub-products__wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
+@media (min-width: $desktop-width) {
+  .sub-products__content {
+    display: flex;
+    flex-flow: row wrap;
+  }
+
+  .sub-products__list {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .sub-products__item {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    width: 896px;
+  }
+}
