--- a/source/styles/common/variables.scss
+++ b/source/styles/common/variables.scss
@@ -1,3 +1,4 @@
+//colors
 $base-color-text: #444444;
 $base-title-color-text: #222222;
 $base-accent-color-text: #ffffff;
@@ -9,3 +10,6 @@ $icon-background-color: #666666;
 $icon-basic-black: #000000;
 $icon-basic-grey: #d3d3d3;
 $decoration-line: #d9d9d9;
+//viewports
+$tablet-width: 768px;
+$desktop-width: 1440px;
