--- a/source/styles/blocks/hero.scss
+++ b/source/styles/blocks/hero.scss
@@ -179,3 +179,65 @@
     text-align: start;
   }
 }
+
+.hero__wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
+@media (min-width: $tablet-width) and (max-width: calc($desktop-width - 1px)) {
+  picture {
+    order: 10;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .hero__wrapper {
+    position: relative;
+    min-height: 500px;
+    max-width: 919px;
+  }
+
+  .hero__title,
+  .hero__desc,
+  .hero__nutrition-program {
+    display: block;
+    max-width: 500px;
+  }
+
+  .hero__title {
+    margin: 0 0 40px;
+    width: 414px;
+    font-size: 60px;
+    line-height: 60px;
+  }
+
+  .hero__desc {
+    margin: 0  0 52px;
+    width: 283px;
+    font-size: 20px;
+    line-height: 20px;
+  }
+
+  .hero__nutrition-program {
+    margin-bottom: 0;
+    width: 244px;
+    font-size: 20px;
+    line-height: 26px;
+  }
+
+  .hero__wrapper picture {
+    position: absolute;
+    right: 0;
+    top: -81px;
+    width: auto;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .hero__title,
+  .hero__desc {
+    color: $icon-basic-black;
+    background-color: $base-accent-color-text;
+  }
+}
