--- a/source/styles/blocks/list-item.scss
+++ b/source/styles/blocks/list-item.scss
@@ -74,14 +74,6 @@
   line-height: 20px;
   color: $base-accent-color-text;
   background-color: $base-color-background;
-  width: 100%;
+  min-width: 280px;
   text-align: center;
-  margin-top: 17px;
-
-  @include often-button();
-  @include button-condition;
-
-  @media screen and (min-width: $tablet-width) {
-    margin-top: 0;
-  }
 }
