--- a/source/styles/blocks/catalog.scss
+++ b/source/styles/blocks/catalog.scss
@@ -5,7 +5,7 @@
   margin: 0;
   padding: 0;
   display: grid;
-  grid-template-columns: repeat(1, 1fr);
+  grid-template-columns: 1fr;
 }
 
 @media (min-width: $tablet-width) {
@@ -16,7 +16,7 @@
   .catalog__wrapper {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    width: 708px;
+    max-width: 708px;
   }
 }
 
@@ -29,7 +29,9 @@
 .catalog__item {
   display: flex;
   flex-wrap: wrap;
-  width: 320px;
+  max-width: 320px;
+  justify-content: center;
+  align-items: center;
   padding: 20px 20px 25px;
 }
 
@@ -86,6 +88,6 @@
   text-align: center;
   color: $base-color-text;
   background-color: $base-accent-color-background;
-  width: 280px;
-  padding: 10px 40px;
+  max-width: 280px;
+  padding: 10px 95px;
 }
