--- a/source/styles/blocks/footer.scss
+++ b/source/styles/blocks/footer.scss
@@ -4,10 +4,9 @@
 
 .footer__map {
   width: 100%;
-  height: 362px;
 
   @media screen and (min-width: $tablet-width) {
-    height: 400px;
+    max-height: 400px;
   }
 }
 
@@ -49,7 +48,7 @@
   justify-content: space-between;
 }
 
-.footer__wrapper--socials {
+.footer__wrapper-socials {
   display: flex;
   flex-flow: column wrap;
   align-items: center;
@@ -63,11 +62,11 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 280px;
+  min-width: 280px;
 }
 
 @media screen and (min-width: $tablet-width) {
-  .footer__wrapper--socials {
+  .footer__wrapper-socials {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
@@ -79,6 +78,6 @@
   }
 
   .footer__copyright {
-    width: 168px;
+    min-width: 168px;
   }
 }
