--- a/source/styles/blocks/how-it-works.scss
+++ b/source/styles/blocks/how-it-works.scss
@@ -58,8 +58,7 @@
   .how-it-works__wrapper {
     display: flex;
     flex-direction: column;
-    width: 780px;
-    margin-left: 30px;
+    max-width: 708px;
   }
 
   .how-it-works__list {
@@ -71,22 +70,26 @@
 
   .how-it-works__list-item {
     position: relative;
-    margin-bottom: 30px;
+    padding-bottom: 57px;
     counter-increment: step-counter;
-    width: 249px;
-    height: 280px;
+    max-width: 250px;
+    padding-top: 150px;
+  }
+
+  .how-it-works__list-item::before {
+    position: absolute;
+    top: 40px;
   }
 
   .how-it-works__list-item::after {
     content: counter(step-counter);
     position: absolute;
     right: 0;
-    top: 50%;
-    transform: translateY(-50%);
+    top: 120px;
     color: $base-accent-color-background;
-    font-size: 282px;
+    font-size: 280px;
     font-weight: 400;
-    line-height: 282px;
+    line-height: 28px;
     font-family: "Oswald", sans-serif;
     z-index: -1;
   }
@@ -94,7 +97,7 @@
 
 @media screen and (min-width: $desktop-width) {
   .how-it-works__wrapper {
-    width: 1220px;
+    max-width: 1220px;
   }
 
   .how-it-works__list {
