--- a/source/styles/blocks/programs.scss
+++ b/source/styles/blocks/programs.scss
@@ -17,7 +17,6 @@
   content: "";
   background-image: url("../../icons/cat-black.svg");
   background-repeat: no-repeat;
-  background-size: 50px 53px;
   width: 50px;
   height: 53px;
   position: absolute;
@@ -81,7 +80,6 @@
   content: "";
   background-image: url("../../icons/cat-black-walk.svg");
   background-repeat: no-repeat;
-  background-size: 67px 50px;
   width: 67px;
   height: 50px;
   position: absolute;
@@ -89,30 +87,48 @@
   left: 0;
 }
 
-@media screen and (min-width: $tablet-width) and (max-width: calc($desktop-width - 1px)) {
+@media screen and (min-width: $tablet-width) {
   .programs__list-item--weight-gain::after {
-    background-size: 268px 200px;
     width: 268px;
     height: 200px;
     top: 0;
     left: auto;
     right: 0;
   }
-}
 
-@media screen and (min-width: $tablet-width) and (max-width: calc($desktop-width - 1px)) {
   .programs__list-item--weight-loss::after {
-    background-size: 200px 211px;
     width: 200px;
     height: 211px;
     top: 0;
     left: auto;
     right: 0;
   }
+
+  .programs__list-item {
+    max-width: 708px;
+  }
+
+  .programs__list-desc::after {
+    content: none;
+  }
 }
 
 @media screen and (min-width: $desktop-width) {
+  .programs__list-item--weight-gain::after {
+    width: 134px;
+    height: 100px;
+    top: 0;
+    left: 0;
+  }
+
+  .programs__list-item--weight-loss::after {
+    width: 100px;
+    height: 106px;
+    top: 0;
+    left: 0;
+  }
+
   .programs__list-item {
-    width: 570px;
+    max-width: 570px;
   }
 }
