--- a/source/styles/blocks/subscribe.scss
+++ b/source/styles/blocks/subscribe.scss
@@ -21,7 +21,7 @@
   text-transform: uppercase;
   color: $base-color-text;
   border: 1px solid $base-color-border;
-  width: 280px;
+  min-width: 280px;
   padding: 12px;
 }
 
