--- a/source/styles/blocks/subscribe.scss
+++ b/source/styles/blocks/subscribe.scss
@@ -87,7 +87,7 @@
   text-transform: uppercase;
   color: $base-color-text;
   border: 1px solid $base-color-border;
-  width: 280px;
+  min-width: 280px;
   padding: 12px;
 
   @media screen and (min-width: $tablet-width) {
