--- a/source/styles/blocks/sub-products.scss
+++ b/source/styles/blocks/sub-products.scss
@@ -39,75 +39,8 @@
 
 .sub-products__list {
   list-style: none;
-  margin: 0 0 35px;
+  margin: 0;
   padding: 0;
-  display: flex;
-  flex-direction: column;
-
-  li:first-child .sub-products__item-title {
-    position: relative;
-
-    &::before {
-      content: "";
-      position: absolute;
-      top: 0;
-      left: 50%;
-      transform: translateX(-50%);
-      width: 100%;
-      height: 1px;
-      background-color: $base-color-border;
-    }
-  }
-
-  @media screen and (min-width: $tablet-width) {
-    margin-bottom: 70px;
-
-    li:first-child .sub-products__item-title::before {
-      content: none;
-    }
-  }
-
-  @media screen and (min-width: $desktop-width) {
-    margin-bottom: 0;
-    display: flex;
-    flex-direction: column;
-    min-width: 896px;
-  }
-}
-
-.sub-products__item {
-  display: flex;
-  flex-direction: column;
-  padding-bottom: 19px;
-
-  @include decorative-line($color: $base-color-border);
-
-  @media screen and (min-width: $tablet-width) {
-    border: 1px solid $base-color-border;
-    border-bottom: none;
-    padding: 26px 37px 27px;
-    flex-flow: row wrap;
-    justify-content: space-between;
-
-    &:last-child {
-      border-bottom: 1px solid $base-color-border;
-    }
-
-    &::after {
-      content: none;
-    }
-  }
-
-  @media screen and (min-width: $desktop-width) {
-    padding: 15px 0 17px;
-    border-right: none;
-    border-left: none;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    max-width: 896px;
-    column-gap: 40px;
-    align-items: center;
-  }
 }
 
 .sub-products__item-title {
@@ -245,20 +178,29 @@
   }
 }
 
+.sub-products__gift {
+  display: flex;
+  padding: 139px 20px 20px;
+  background-color: $base-color-background;
+  max-width: 280px;
+  position: relative;
+}
+
 .sub-products__gift-desc {
   display: block;
   font-size: 16px;
   line-height: 20px;
   color: $base-accent-color-text;
   text-align: center;
-  position: relative;
-  padding-top: 60px;
+  padding: 48px 0 23px;
+  margin: 0 auto;
+  max-width: 162px;
 }
 
-.sub-products__gift-desc::before {
+.sub-products__gift::before {
   content: "";
   position: absolute;
-  top: -48px;
+  top: 59px;
   left: 50%;
   transform: translateX(-50%);
   width: 78px;
@@ -271,20 +213,67 @@
   flex-direction: column;
 }
 
+@media (min-width: $tablet-width) {
+  .sub-products__gift {
+    max-width: 707px;
+    padding: 40px;
+    justify-content: end;
+  }
+
+  .sub-products__gift::before {
+    width: 81px;
+    height: 82px;
+    top: 50%;
+    left: 77px;
+    transform: translateY(-50%);
+  }
+
+  .sub-products__gift-desc {
+    max-width: 160px;
+    padding: 0;
+    text-align: left;
+    margin: 31px 85px 29px;
+  }
+}
+
 @media (min-width: $desktop-width) {
   .sub-products__content {
     display: flex;
+    gap: 80px;
     flex-flow: row wrap;
+    align-items: center;
   }
 
   .sub-products__list {
     display: flex;
     flex-direction: column;
+    min-width: 896px;
   }
 
   .sub-products__item {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    width: 896px;
+    max-width: 896px;
+  }
+
+  .sub-products__gift {
+    display: flex;
+    padding: 139px 20px 20px;
+    min-width: 245px;
+  }
+
+  .sub-products__gift-desc {
+    text-align: center;
+    padding: 46px 0 23px;
+    margin: 0 auto;
+    max-width: 162px;
+  }
+
+  .sub-products__gift::before {
+    top: 59px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 80px;
+    height: 83px;
   }
 }
